--- a/Perform_Text_Cleaning_&_Standardization.ipynb
+++ b/Perform_Text_Cleaning_&_Standardization.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMFK2Tc2D4Gf9YSFYB5pG/9",
+      "authorship_tag": "ABX9TyOGU7ZsEyLbdDD76vLN1ZU6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 17,
       "metadata": {
         "id": "59LEd5LtEGgb",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 564
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1e70983d-a7b7-49ea-91b4-38265cab1d25"
+        "outputId": "67b9b53e-84ef-4c10-9401-b3c6ec60075c"
       },
       "outputs": [
         {
@@ -46,12 +45,7 @@
             "Requirement already satisfied: textsearch>=0.0.21 in /usr/local/lib/python3.12/dist-packages (from contractions) (0.0.24)\n",
             "Requirement already satisfied: anyascii in /usr/local/lib/python3.12/dist-packages (from textsearch>=0.0.21->contractions) (0.3.3)\n",
             "Requirement already satisfied: pyahocorasick in /usr/local/lib/python3.12/dist-packages (from textsearch>=0.0.21->contractions) (2.3.0)\n",
-            "Collecting pyspellchecker\n",
-            "  Downloading pyspellchecker-0.8.4-py3-none-any.whl.metadata (9.4 kB)\n",
-            "Downloading pyspellchecker-0.8.4-py3-none-any.whl (7.2 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.2/7.2 MB\u001b[0m \u001b[31m57.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: pyspellchecker\n",
-            "Successfully installed pyspellchecker-0.8.4\n"
+            "Requirement already satisfied: pyspellchecker in /usr/local/lib/python3.12/dist-packages (0.8.4)\n"
           ]
         },
         {
@@ -63,16 +57,10 @@
           ]
         },
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "sequence item 28: expected str instance, NoneType found",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-2475967947.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[0mmessy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 48\u001b[0;31m \u001b[0mtext\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcleanText\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     49\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/tmp/ipython-input-2475967947.py\u001b[0m in \u001b[0;36mcleanText\u001b[0;34m(text)\u001b[0m\n\u001b[1;32m     40\u001b[0m   \u001b[0mtext\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcontractions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m   \u001b[0mtext\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mremove_stopwords\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m   \u001b[0mtext\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mspeller\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mtext\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/tmp/ipython-input-2475967947.py\u001b[0m in \u001b[0;36mspeller\u001b[0;34m(text)\u001b[0m\n\u001b[1;32m     18\u001b[0m   \u001b[0mwords\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m   \u001b[0mfixed\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mspell\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcorrection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mwords\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0;34m\" \"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfixed\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mremove_stopwords\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: sequence item 28: expected str instance, NoneType found"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "the problematic text fly contains extra spaces special characters words misspelled encoding issues like the us problems prices inconsistent 29.99 29.99 us 2999. emails phone numbers may embedded contactdomain.com 1234567890. repeated punctuations removed along random symbols like . stopwords like appear often him tags might present divthis inside divide sometimes contractions expand cannot not random numeric values 123456 98765 2024.\n"
           ]
         }
       ],
@@ -96,7 +84,10 @@
         "\n",
         "def speller(text):\n",
         "  words=text.split()\n",
-        "  fixed=[spell.correction(word) for word in words]\n",
+        "  fixed=[]\n",
+        "  for word in words:\n",
+        "    corrected=spell.correction(word)\n",
+        "    fixed.append(corrected if corrected is not None else word)\n",
         "  return \" \".join(fixed)\n",
         "\n",
         "def remove_stopwords(text):\n",
@@ -115,7 +106,7 @@
         "  text=text.lower()\n",
         "  #trans=str.maketrans(\"\",\"\",string.punctuation)\n",
         "  #text=text.translate(trans)\n",
-        "  text=re.sub(r\"[^a-z0-9\\s]\",\"\",text)\n",
+        "  text=re.sub(r\"[^a-z0-9\\.\\s]\",\"\",text)\n",
         "  text=re.sub(r\"\\s+\",\" \",text)\n",
         "  text=contractions.fix(text)\n",
         "  text=remove_stopwords(text)\n",
